overlays/kubernetes/ingress-without-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: k3s-registry
spec:
  rules:
  - host: k3s-registry.ubuntu-k3s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-registry
            port:
              number: 5000
